--- a/templates/sujets.html
+++ b/templates/sujets.html
@@ -1,31 +1,24 @@
 {% extends "layout.html" %}{% block title%}Sujets{% endblock %}{% block body %}  
-<div class="row">
-   <div class="col">
-      <div class="card card-body">
-         <h2>
-            <center>Sujets</center>
-         </h2>
-      </div>
-   </div>
-</div>
-<div class="col">
-   {% with messages = get_flashed_messages()  %}{% if messages %}{% for message in messages %}
+{% with messages = get_flashed_messages()  %}{% if messages %}{% for message in messages %}
    <div class="alert alert-success alert-dismissible fade show" role="alert">
       {{ message }}
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
    </div>
    {% endfor %}{% endif %}{% endwith %}
+<div class = "row pt-3">
+   
    <div class="card card-body">
       <h2>
          <center>Ajouter un sujet</center>
       </h2>
       <form action="{{url_for('adminviews.add_sujet')}}" method="POST">
          <div class="form-group">
+            <label> Sujet :</label>
             <input type="text" class="form-control" name="sujet" placeholder="Sujet" required>
          </div>
          <div class="form-group">
-            Type :
-            <select name="type" size="1" required>
+         <label> Type :</label>
+            <select class="form-control" name = "type" required>
                <option value="Débat parlemenait">Sélectionnez une option&hellip;</option>
                <option value="Débat parlementaire">Débat parlementaire</option>
                <option value="Plaidoirie">Plaidoirie</option>
@@ -36,7 +29,9 @@
       </form>
    </div>
 </div>
-<div class="col">
+<div>
+
+<div class = "row pt-3">
    <table class="table table-striped table-hover table-bordered table-sm bg-white">
       <thead>
          <tr>
@@ -52,7 +47,7 @@
             <td>{{sujet.2}}</td>
             <td>
                <a href="/editsujet/{{sujet.0}}" class="btn btn-secondary">edit</a>
-               <a href="/deletesujet/{{sujet.0}}" class="btn btn-danger btn-delete">delete</a>
+               <a href="/deletesujet/{{sujet.0}}" class="btn btn-danger btn-delete">suppr</a>
             </td>
          </tr>
          {% endfor %}
