--- a/templates/createaccount.html
+++ b/templates/createaccount.html
@@ -1,4 +1,6 @@
-{% extends "layout.html" %}{% block title%}Créer un compte{% endblock %}{% block body %} 
+{% extends "layout.html" %}
+{% block title%}Créer un compte{% endblock %}{% block body %} 
+
 <div class="row">
    <div class="col">
       <div class="card card-body">
@@ -9,7 +11,7 @@
    </div>
 </div>
 <div class="row">
-   <div class="col">
+   <div class="col pt-3">
       {% with messages = get_flashed_messages()  %}{% if messages %}{% for message in messages %}
       <div class="alert alert-success alert-dismissible fade show" role="alert">
          {{ message }}
@@ -19,26 +21,44 @@
       <div class="card card-body">
          <form action="{{url_for('mainviews.add_contact')}}" method="POST">
             <div class="form-group">
+               <label> Nom :</label>
                <input type="text" class="form-control" name="nom" placeholder="Nom" required>
             </div>
             <div class="form-group">
+               <label> Prénom :</label>
                <input type="text" class="form-control" name="prenom" placeholder="Prénom" required>
             </div>
             <div class="form-group">
-               <input type="text" class="form-control" name="username" placeholder="Username" required>
+               <label> Identifiant :</label>
+               <input type="text" class="form-control" name="username" placeholder="Identifiant" required>
             </div>
             <div class="form-group">
-               <input type="password" class="form-control" name="password" placeholder="Password" required>
+               <label> Mot de passe :</label>
+               <input type="password" class="form-control" name="password" placeholder="Mot de passe" 
+                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                    title="Doit contenir au moins 8 caractères dont au moins un chiffre, une lettre majuscule et une lettre minuscule."
+                    required>
             </div>
             <div class="form-group">
-               <input type="email" class="form-control" name="email" placeholder="Email" required>
+               <label> Confirmez le mot de passe :</label>
+               <input type="password" class="form-control" name="confirmpassword" placeholder="Confirmer le mot de passe" 
+                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                    title="Doit contenir au moins 8 caractères dont au moins un chiffre, une lettre majuscule et une lettre minuscule."
+                    required>
             </div>
             <div class="form-group">
-               <input type="tel" placeholder = "Téléphone (06 00 00 00 00)" name="phone" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" class="form-control" required>
+               <label> Téléphone :</label>
+               <input type="tel" placeholder = "Téléphone (06 00 00 00 00)" name="phone"
+               pattern="[0-9\s]{10,14}" class="form-control" required>
             </div>
             <div class="form-group">
-               École :
-               <select name="ecole" id="select" size="1" required>
+               <label> E-mail :</label>
+               <input type="email" placeholder = "E-mail" name="email" 
+               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class="form-control" required>
+            </div>
+            <div class="form-group">
+               <label> École :</label>
+               <select class="form-control" name="ecole" id="select" size="1" required>
                   <option value="{{ecole[0]}}">Sélectionnez une option&hellip;</option>
                   {% for ecole in ecole %}
                   <option value="{{ecole}}">{{ecole}}</option>
@@ -46,24 +66,24 @@
                </select>
             </div>
             <div class="form-group">
-               Année : 
-               <select name="annee" id="select" size="1" required>
+               <label> Année :</label>
+               <select class="form-control" name="annee" id="select" size="1" required>
                   <option value="{{annee[0]}}">Sélectionnez une option&hellip;</option>
                   {% for annee in annee %}
                   <option value="{{annee}}">{{annee}}</option>
                   {% endfor %}
                </select>
-            </div>
+            </div>            
             <div class="form-group">
-               Spécialité : 
-               <select name="specialite" id="select" size="1" required>
+               <label> Spécialité : </label>
+               <select class="form-control" name="specialite" id="select" size="1" required>
                   <option value="{{specialite[0]}}">Sélectionnez une option&hellip;</option>
                   {% for specialite in specialite %}
                   <option value="{{specialite}}">{{specialite}}</option>
                   {% endfor %}
                </select>
             </div>
-            <button class="btn btn-primary btn-block">Ajouter un membre</button>
+            <button class="btn btn-success btn-block">Ajouter un membre</button>
          </form>
       </div>
    </div>
