--- a/templates/edit-contact.html
+++ b/templates/edit-contact.html
@@ -5,23 +5,29 @@
 <div class="col-md-8 offset-md-2">
    <div class="card card-body">
       <form action="/update/{{contact.0}}" method="POST">
-         <div class="form-group">
-            <input type="text" placeholder = "Identifiant" name="username" value="{{contact.1}}" class="form-control" required>
-            <div class="form-group">
-               <input type="text" placeholder = "Nom" name="nom" value="{{contact.6}}" class="form-control" required>
+         <div class="form-group">         
+               <label> Identifiant :</label>
+            <input type="text" placeholder = "Identifiant" name="username" value="{{contact.1}}" 
+               class="form-control" pattern="[a-z]{4,12}" title="4 à 12 lettres en minuscules" required>
+            <div class="form-group">            
+               <label> Nom :</label>
+               <input type="text" placeholder = "Nom" name="nom" value="{{contact.6}}"class="form-control" required>
             </div>
             <div class="form-group">
+               <label> Prénom :</label>
                <input type="text" placeholder = "Prénom"  name="prenom" value="{{contact.7}}" class="form-control" required>
             </div>
             <div class="form-group">
-               <input type="email" placeholder = "E-mail"  name="email" value="{{contact.3}}" class="form-control" required>
-            </div>
-            <div class="form-group">            
-               <input type="tel" placeholder = "Téléphone (06 00 00 00 00)" name="phone" value="{{contact.10}}" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" class="form-control" required>
+               <label> E-mail :</label>
+               <input type="email" placeholder = "E-mail"  name="email" value="{{contact.3}}" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class="form-control" required>
             </div>
             <div class="form-group">
-               École :
-               <select name ="ecole" id="select" size="1" required>
+               <label> Téléphone :</label>            
+               <input type="tel" placeholder = "Téléphone (06 00 00 00 00)" name="phone" value="{{contact.10}}" pattern="[0-9\s]{10,14}" class="form-control" required>
+            </div>
+            <div class="form-group">
+               <label> École :</label>
+               <select class="form-control"name ="ecole" id="select" size="1" required>
                   <option value="{{contact.8}}">Sélectionnez une option&hellip;</option>
                   {% for ecole in ecole %}
                   <option value="{{ecole}}">{{ecole}}</option>
@@ -29,8 +35,8 @@
                </select>
             </div>
             <div class="form-group">
-               Année :
-               <select name="annee" id="select" size="1" required>
+               <label> Année :</label>
+               <select class="form-control" name="annee" id="select" size="1" required>
                   <option value="{{contact.9}}">Sélectionnez une option&hellip;</option>
                   {% for annee in annee %}
                   <option value="{{annee}}">{{annee}}</option>
@@ -38,8 +44,8 @@
                </select>
             </div>
             <div class="form-group">
-               Spécialité :
-               <select name="specialite" id="select" size="1" required>
+               <label> Spécialité :</label>
+               <select class="form-control" name="specialite" id="select" size="1" required>
                   <option value="{{contact.11}}">Sélectionnez une option&hellip;</option>
                   {% for specialite in specialite %}
                   <option value="{{specialite}}">{{specialite}}</option>
@@ -47,8 +53,8 @@
                </select>
             </div>
             <div class="form-group">
-               Admin :
-               <select name="admin" id="select" size="1" required>
+               <label> Profil :</label>
+               <select class="form-control" name="admin" id="select" size="1" required>
                   <option value="{{contact.4}}">Sélectionnez une option&hellip;</option>
                   {% for admin in admin %}
                   <option value="{{admin[0]}}">{{admin[1]}}</option>
@@ -56,16 +62,16 @@
                </select>
             </div>
             <div class="form-group">
-               <button type="submit" class="btn btn-primary btn-block">
+               <button type="submit" class="btn btn-success btn-block">
                Update
                </button>
             </div>
       </form>
       <form action="/resetpassword/{{contact.0}}" method="POST">
       <div class="form-group">
-      <button type="submit" class="btn btn-primary btn-block">
-      Reset Password
-      </button>
+         <button type="submit" class="btn btn-primary btn-block">
+            Reset Password
+         </button>
       </div>
       </form>
       </div>
