--- a/templates/editsujet.html
+++ b/templates/editsujet.html
@@ -6,11 +6,12 @@
    <div class="card card-body">
       <form action="/{{sujet.0}}" method="POST">
          <div class="form-group">
+            </label>Sujet :</label>
             <input type="text" placeholder = "Sujet" name="sujet" value="{{sujet.1}}" class="form-control">
          </div>
          <div class="form-group">
-            Type : 
-            <select name = "type">
+            <label> Type :</label>
+            <select class="form-control" name = "type">
                <option value="{{sujet.2}}">Sélectionnez une option&hellip;</option>
                <option value="Débat parlementaire">Débat parlementaire</option>
                <option value="Plaidoirie">Plaidoirie</option>
