--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,16 @@
 {% extends "layout.html" %}
 {% block title%}Home Page{% endblock %}{% block body %}  
 <div class="row">
-   <div class="col">
+   <div class="col pt-3">
       <div class="card card-body">
          <h2>
-            <center>Bonjour {{account['prenom']}} {{account['nom']}}</center>
+            <center>Bonjour {{account['prenom']}}</center>
          </h2>
       </div>
    </div>
 </div>
 <div class="row">
-   <div class="col-md-6">
+   <div class="col-md-6 pt-3">
       <div class="card card-body">
          <h5>Identifiant : {{account['username']}}</h5>
          <h5>Nom : {{account['nom']}}</h5>
@@ -18,22 +18,24 @@
          <h5>Spécialité : {{account['specialite']}}</h5>
       </div>
    </div>
-   <div class="col-md-6">
+   <div class="col-md-6 pt-3">
       <div class="card card-body">
          <h5>École : {{account['ecole']}}</h5>
          <h5>Année : {{account['annee']}}</h5>
          <h5>Téléphone : {{account['phone']}}</h5>
          <h5>Mail : {{account['email']}}</h5>
       </div>
+      <div class="card card-body">
       <form action="{{url_for('mainviews.edituser')}}" method="POST">
-         <button class="btn btn-primary btn-block">Modifier</button>
+         <button class="btn btn-info btn-block">Modifier</button>
       </form>
+      </div>
    </div>
 </div>
 <!-- Si vous voyez ce message, c'est que vous n'êtes pas en train d'utiliser le site dans
    son utilisation habituelle. Ne vous étonnez pas si vous tombez sur un gandalf qui danse
    sur une musique saxo -->
-<div class="col">
+<div class="pt-3">
    <table class="table table-striped table-hover table-bordered table-sm bg-white">
       <thead>
          <tr>
@@ -51,7 +53,7 @@
             <td>{{infos.2}}</td>
             {% if account['admin'] == 1 %}
             <td>
-               <a href="/deleteinfo/{{infos.0}}" class="btn btn-danger btn-delete">delete</a>
+               <a href="/deleteinfo/{{infos.0}}" class="btn btn-danger btn-delete">suppr</a>
             </td>
             {% endif %}
          </tr>
