--- a/templates/login.html
+++ b/templates/login.html
@@ -10,42 +10,62 @@
    </div>
 </div>
 <div class="row">
-<div class="col-md-6">
+<div class="col-md-6 pt-3">
    <div class="card card-body">
       <center>
-         <h2>Connexion</h2>
+         <h3>Connexion</h3>
       </center>
       <form action="{{ url_for('mainviews.login') }}" method="post">
          <div class="form-group">
+
+         <label> Identifiant :</label>
             <input type="text" name="username" placeholder="Identifiant" class="form-control" required>
          </div>
          <div class="form-group">
+
+         <label> Mot de passe :</label>
             <input type="password" name="password" placeholder="Mot de passe" class="form-control" required>
          </div>
          <div class="msg">{{ msg }}</div>
          <button class="btn btn-primary btn-block">Connexion</button>
       </form>
    </div>
+   
+   <div class="card card-body">
   <form action="{{ url_for('mainviews.createaccount') }}">
-     <button class="btn btn-primary btn-block">Créer un compte</button>
+     <button class="btn btn-success btn-block">Créer un compte</button>
   </form>
+  </div>
 </div>
-<div class="col-md-6">
+<div class="col-md-6 pt-3">
    <div class="row">
       <div class="col">
          <div class="card card-body">
             <center>
-               <h2>Changer le mot de passe</h2>
+               <h3>Changer le mot de passe</h3>
             </center>
             <form action="{{ url_for('mainviews.password') }}" method="post">
                <div class="form-group">
+                  <label> Identifiant :</label>
                   <input type="text" name="username" placeholder="Identifiant" class="form-control" required>
                </div>
                <div class="form-group">
+                  <label> Ancien mot de passe :</label>
                   <input type="password" name="password" placeholder="Mot de passe actuel" class="form-control" required>
                </div>
                <div class="form-group">
-                  <input type="password" name="newpassword" placeholder="Nouveau Mot de passe" class="form-control" required>
+                  <label> Nouveau mot de passe :</label>
+                  <input type="password" name="newpassword" placeholder="Nouveau mot de passe" class="form-control" 
+                     pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                     title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
+                     required>
+               </div>
+               <div class="form-group">
+                  <label> Confirmer le nouveau mot de passe :</label>
+                  <input type="password" class="form-control" name="confirmpassword" placeholder="Confirmer le nouveau mot de passe" 
+                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                    title="Doit contenir au moins 8 caractères dont au moins un chiffre, une lettre majuscule et une lettre minuscule."
+                    required>
                </div>
                <div class="msg">{{ msg1 }}</div>
                <button class="btn btn-primary btn-block">Changer le Mot de passe</button>
