--- a/templates/membres.html
+++ b/templates/membres.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}{% block title%}Membres{% endblock %}{% block body %} 
-<div class="row">
+<div class="row pt-3">
    <div class="col">
       <div class="card card-body">
          <h2>
@@ -8,8 +8,8 @@
       </div>
    </div>
 </div>
-<div class="row">
-   <div class="col-md-5">
+<div class="row pt-3">
+   <div class="col-md-6 pt-3">
       {% with messages = get_flashed_messages()  %}{% if messages %}{% for message in messages %}
       <div class="alert alert-success alert-dismissible fade show" role="alert">
          {{ message }}
@@ -19,26 +19,30 @@
       <div class="card card-body">
          <form action="{{url_for('membreviews.add_contact')}}" method="POST">
             <div class="form-group">
+               <label> Nom :</label>
                <input type="text" class="form-control" name="nom" placeholder="Nom" required>
             </div>
             <div class="form-group">
+               <label> Prénom :</label>
                <input type="text" class="form-control" name="prenom" placeholder="Prénom" required>
             </div>
             <div class="form-group">
-               <input type="text" class="form-control" name="username" placeholder="Username" required>
+               <label> Identifiant :</label>
+               <input type="text" class="form-control" name="username" placeholder="Identifiant" required>
             </div>
             <div class="form-group">
-               <input type="password" class="form-control" name="password" placeholder="Password" required>
+               <label> Téléphone :</label>
+               <input type="tel" placeholder = "Téléphone (06 00 00 00 00)" name="phone"
+               pattern="[0-9\s]{10,14}" class="form-control" required>
             </div>
             <div class="form-group">
-               <input type="email" class="form-control" name="email" placeholder="Email" required>
+               <label> E-mail :</label>
+               <input type="email" placeholder = "E-mail" name="email" 
+               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class="form-control" required>
             </div>
             <div class="form-group">
-               <input type="tel" placeholder = "Téléphone (06 00 00 00 00)" name="phone" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" class="form-control" required>
-            </div>
-            <div class="form-group">
-               École :
-               <select name="ecole" id="select" size="1" required>
+               <label> École :</label>
+               <select class="form-control" name="ecole" id="select" size="1" required>
                   <option value="{{ecole[0]}}">Sélectionnez une option&hellip;</option>
                   {% for ecole in ecole %}
                   <option value="{{ecole}}">{{ecole}}</option>
@@ -46,8 +50,8 @@
                </select>
             </div>
             <div class="form-group">
-               Année : 
-               <select name="annee" id="select" size="1" required>
+               <label> Année :</label>
+               <select class="form-control" name="annee" id="select" size="1" required>
                   <option value="{{annee[0]}}">Sélectionnez une option&hellip;</option>
                   {% for annee in annee %}
                   <option value="{{annee}}">{{annee}}</option>
@@ -55,8 +59,8 @@
                </select>
             </div>
             <div class="form-group">
-               Spécialité : 
-               <select name="specialite" id="select" size="1" required>
+               <label> Spécialité :</label>
+               <select class="form-control" name="specialite" id="select" size="1" required>
                   <option value="{{specialite[0]}}">Sélectionnez une option&hellip;</option>
                   {% for specialite in specialite %}
                   <option value="{{specialite}}">{{specialite}}</option>
@@ -64,19 +68,19 @@
                </select>
             </div>
             <div class="form-group">
-               Profil :
-               <select name="admin" id="select" size="1" required>
+               <label> Profil :</label>
+               <select class="form-control" name="admin" id="select" size="1" required>
                   <option value="{{admin[0][0]}}">Sélectionnez une option&hellip;</option>
                   {% for admin in admin %}
                   <option value="{{admin[0]}}">{{admin[1]}}</option>
                   {% endfor %}
                </select>
             </div>
-            <button class="btn btn-primary btn-block">Ajouter un membre</button>
+            <button class="btn btn-success btn-block">Ajouter un membre</button>
          </form>
       </div>
    </div>
-   <div class="col-md-7">
+   <div class="col-md-6 pt-3">
       <table class="table table-striped table-hover table-bordered table-sm bg-white">
          <thead>
             <tr>
@@ -94,7 +98,7 @@
                <td>{{contact.11}}</td>
                <td>
                   <a href="/edit/{{contact.0}}" class="btn btn-secondary">edit</a>
-                  <a href="/delete/{{contact.0}}" class="btn btn-danger btn-delete">delete</a>
+                  <a href="/delete/{{contact.0}}" class="btn btn-danger btn-delete">suppr</a>
                </td>
             </tr>
             {% endfor %}
