--- a/templates/adminpage.html
+++ b/templates/adminpage.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 {% block title%}Home Page{% endblock %}{% block body %}  
 <div class="row">
    <div class="col pt-3">
