--- a/templates/edit-contact.html
+++ b/templates/edit-contact.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 {% block title%}Edit Admin{% endblock %}
 {% block body %}
 <div class="row">
@@ -57,7 +57,9 @@
                <select class="form-control" name="admin" id="select" size="1" required>
                   <option value="{{contact.4}}">Sélectionnez une option&hellip;</option>
                   {% for admin in admin %}
+                  {% if session['admin']|int >= admin[0]|int  %}
                   <option value="{{admin[0]}}">{{admin[1]}}</option>
+                  {% endif %}
                   {% endfor %}
                </select>
             </div>
@@ -68,11 +70,11 @@
             </div>
       </form>
       <form action="/resetpassword/{{contact.0}}" method="POST">
-      <div class="form-group">
-         <button type="submit" class="btn btn-primary btn-block">
-            Reset Password
-         </button>
-      </div>
+         <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-block">
+               Reset Password
+            </button>
+         </div>
       </form>
       </div>
    </div>
