--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 {% block title%}Home Page{% endblock %}{% block body %} 
 <div class="row">
    <div class="col">
@@ -55,15 +55,13 @@
                </div>
                <div class="form-group">
                   <label> Nouveau mot de passe :</label>
-                  <input type="password" name="newpassword" placeholder="Nouveau mot de passe" class="form-control" 
-                     pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                  <input type="password" name="newpassword" placeholder="Nouveau mot de passe" class="form-control"
                      title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
                      required>
                </div>
                <div class="form-group">
                   <label> Confirmer le nouveau mot de passe :</label>
                   <input type="password" class="form-control" name="confirmpassword" placeholder="Confirmer le nouveau mot de passe" 
-                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
                     title="Doit contenir au moins 8 caractères dont au moins un chiffre, une lettre majuscule et une lettre minuscule."
                     required>
                </div>
